--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <script src="enemy.js"></script>
     <script src="node.js"></script>
     <script src="pathfinder.js"></script>
+    <link rel="stylesheet" type="text/css" href="SEESS.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <body style="background-color: darkblue;">
-    <div>
-        dassad
-    </div>
-</body>
+        <div class="game-mode">
+            <div id="score">Score : 0</div>
+            <!-- <div class="ghost-killed">Ghost Killed : 0</div> -->
+        </div>
+    </body>
 </html>
