--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <html>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <script src="brain.js"></script>
-    <script src="player.js"></script>
-    <script src="playground.js"></script>
-    <script src="wall.js"></script>
-    <script src="enemy.js"></script>
-    <script src="node.js"></script>
-    <script src="pathfinder.js"></script>
-    <link rel="stylesheet" type="text/css" href="SEESS.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <body style="background-color: darkblue;">
+  
+    <link rel="stylesheet" type="text/css" href="SEESS.css">
+    <body>
         <div class="game-mode">
-            <div id="score">Score : 0</div>
-            <!-- <div class="ghost-killed">Ghost Killed : 0</div> -->
+            <div>
+                <button class="restart-btn">Restart</button>
+                <span>
+                    <button class="pause-btn">Pause</button>
+                </span>
+            </div>
+            <div id="score">&nbsp;</div>
+        </div>
+        <div class="gameover-screen" hidden>
+            <div class="gameover-bg"></div>
+            <div class="gameover-message">
+                <p id='gameover-msg'>Game Over</p>
+                <button class="restart-btn"> Restart </button>
+            </div>
         </div>
     </body>
+    <script src="pacman/brain.js"></script>
+    <script src="pacman/player.js"></script>
+    <!-- <script src="config.js"></script> -->
+    <script src="pacman/playground.js"></script>
+    <script src="pacman/wall.js"></script>
+    <script src="pacman/enemy.js"></script>
+    <script src="pacman/node.js"></script>
+    <script src="pacman/pathfinder.js"></script>
+    <script src="uiListeners.js"></script>
 </html>
