added all assets to creation center

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <div class="asset-btn enemy" onclick="selectMapAsset('enemy')">Enemies</div>
             <div class="asset-btn food" onclick="selectMapAsset('food')">food</div>
             <div class="asset-btn energy" onclick="selectMapAsset('energy')">Energies</div>
+            <div class="asset-btn pacman" onclick="selectMapAsset('pacman')">Pacman</div>
         </div>
         
 
