loading into array

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
         </div>
 
         <div class="assets-btns" hidden>
-            <div class="asset-btn wall" onclick="selectMapAsset('wall')">Walls</div>
-            <div class="asset-btn enemy" onclick="selectMapAsset('enemy')">Enemies</div>
-            <div class="asset-btn food" onclick="selectMapAsset('food')">food</div>
-            <div class="asset-btn energy" onclick="selectMapAsset('energy')">Energies</div>
+            <div class="asset-btn wall" onclick="selectMapAsset('wall')">Wall</div>
+            <div class="asset-btn enemy" onclick="selectMapAsset('enemy')">Enemy</div>
+            <div class="asset-btn food" onclick="selectMapAsset('food')">Food</div>
+            <div class="asset-btn energy" onclick="selectMapAsset('energy')">Energy</div>
             <div class="asset-btn pacman" onclick="selectMapAsset('pacman')">Pacman</div>
+            <div class="asset-btn reset red-bg" onclick="selectMapAsset('reset')">Reset</div>
+            <div class="asset-btn dragMode" onclick="toggleDragMode()" value="off">Enable Drag Mode</div>
         </div>
         
 
