--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             <div class="asset-btn pacman" onclick="selectMapAsset('pacman')">Pacman</div>
             <div class="asset-btn reset red-bg" onclick="selectMapAsset('reset')">Reset</div>
             <div class="asset-btn dragMode" onclick="toggleDragMode()" value="off">Enable Drag Mode</div>
+            <div class="asset-btn" onclick="test()" value="off">TEST</div>
+            <a class="asset-btn" onclick="downloadConfig()" value="off" id='downloadLink' href="" download>Download Config</a>
         </div>
         
 
