map creation done

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             <div class="asset-btn reset red-bg" onclick="selectMapAsset('reset')">Reset</div>
             <div class="asset-btn dragMode" onclick="toggleDragMode()" value="off">Enable Drag Mode</div>
             <div class="asset-btn testMode" onclick="toggleTestMap()" value="off">Test Map</div>
-            <a class="asset-btn download-a" onclick="downloadConfig()" value="off" id='downloadLink' href="" download>Download Config</a>
+            <a class="asset-btn download_upload download-a" onclick="downloadConfig()" value="off" id='downloadLink' href="" download>Download Config</a>
+            <br/>
+            <input type="file" class="asset-btn download_upload uploadConfig" />
         </div>
         
 
