--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="global.css">
+    <script> const isElectron = (window && window.process && window.process.type) </script>
     <body>
         <div class="game-mode">
             <div>
@@ -33,12 +34,12 @@
 
         <div class="start-screen">
             <div class="overlap-bg black-screen-bg">
-                <img src="/assets/mainscreen.gif"/>
+                <img src="assets/mainscreen.gif"/>
             </div>
             <div class="start-bg">
                 <div class="screen-message start-game" onclick="onStart()">Start</div>
-                <div class="screen-message create-map" onclick="loadCreationCenter()">Create Map</div>
-                <div class="screen-message load-map">Load Map</div>
+                <div class="screen-message create-map" onclick="loadCreationCenter()">Create</div>
+                <div class="screen-message load-map">Load</div>
             </div>
         </div>
 
