--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <br/>
             <input type="file" class="asset-btn download_upload uploadConfig" />
         </div>
+
+        <div class="load-screen">
+        </div>
         
 
     </body>
